--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -9,10 +9,10 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="works_on_smartphone">
     <header>
         <h4>See my tweets:</h4>
-        <ul>
+        <ul class="right">
             <li><a href="./tweets.html" target="_blank">Tweets</a></li>
             <li><a href="./index.html" target="_blank">Home</a></li>
         </ul>
