--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -30,7 +30,7 @@
             <p>Coding</p>
             <p>Reading</p>
             <p>A picture of me:</p>
-            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX-Logo-07">
+            <img src="https://avatars.githubusercontent.com/u/108171366?v=4" class="Buny" alt="picture of Author">
 
             <!-- Learners Table -->
             <h3>Learners Information</h3>
