--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -5,58 +5,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.cdnfonts.com/css/spin-cycle" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
+    <section class="hero">
+        <header>
+            <nav>
+                <div class="logo">
+                    <img src="./images/smile(1).svg" alt="logo" class="logo-img1">
+                    <img src="./images/SmileSchool.svg" alt="Logo-text" class="logo-img2" >
+                </div>
+                
 
-            <ul>
-                <li><a href="#">COURSE</a></li>
-                <li><a href="#">PRICING</a></li>
-                <li><a href="#">LOGIN</a></li>
-            </ul>
-        </nav>
+                <ul>
+                    <li><a href="#">COURSE</a></li>
+                    <li><a href="#">PRICING</a></li>
+                    <li><a href="#">LOGIN</a></li>
+                </ul>
+            </nav>
 
-    </header>
-    <main>
-        <section>
-            <div>
+        </header>
+
+        <section class="hero-section">
+            <div class="hero-text">
                 <h1>Get schooled</h1>
-                <span>SMILES</span>
-                <span>GRIN</span>
-                <span>LAUGH</span>
+                <div class="span-box">
+                    <span>SMILES</span>
+                    <span>GRIN</span>
+                    <span>LAUGH</span>
+                </div>
                 <button>REGISTER FOR FREE</button>
             </div>
-            <div>
-                <h2>Learn from the pros</h2>
-                <div>
-                    <div>
+            <div class="hero-intro">
+                <h2><span class="purple-span">Learn</span> from the pros</h2>
+                <div class="intro-container">
+                    <div class="intro-card" >
                         <img src="./images/1.png" alt="">
-                        <h3>Phillip Massey</h3>
-                        <p>« Smile of the year » 2018 - 2019</p>
+                        <div class="intro-text">
+                            <h3>Phillip Massey</h3>
+                            <p>« Smile of the year » 2018 - 2019</p>
+                        </div>
                     </div>
-                    <div>
+                    <div class="intro-card">
                         <img src="./images/6.png" alt="">
-                        <h3>Nannie Lawrence</h3>
-                        <p>Best « little smile » 2017</p>
+                        <div class="intro-text">
+                            <h3>Nannie Lawrence</h3>
+                            <p>Best « little smile  » 2017</p>
+                        </div>
                     </div>
-                    <div>
+                    <div class="intro-card">
                         <img src="./images/7.png" alt="">
-                        <h3>Bruce Walters</h3>
-                        <p>Best « Friend Smile » live performance 2019</p>
+                        <div class="intro-text">
+                            <h3>Bruce Walters</h3>
+                            <p>Best « Friend Smile » live performance 2019</p>
+                        </div>
                     </div>
-                    <div>
+                    <div class="intro-card">
                         <img src="./images/8.png" alt="">
-                        <h3>Henry Hughes</h3>
-                        <p>« 24h smiles » winner 2016 - 2019</p>
+                        <div class="intro-text">
+                            <h3>Henry Hughes</h3>
+                            <p>« 24h smiles » winner 2016 - 2019</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+    </section>
+    <main>
+        
         <section>
             <div>
                 <img src="./images/Bitmap.png" alt="image">
