--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -76,14 +76,14 @@
     </section>
     <main>
         
-        <section>
-            <div>
+        <section class="quote-section">
+            <div class="quote-image">
                 <img src="./images/Bitmap.png" alt="image">
             </div>
-            <div>
+            <div class="quote-text">
                 <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place
                     to learn smiling. And it’s so fun!</blockquote>
-                <h3>NAME</h3>
+                <h3>Ose Oduwaye</h3>
                 <P>weather presenter</P>
             </div>
         </section>
