--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -192,29 +192,35 @@
                 </div>
             </div>
         </section>
-        <section>
-            <h2>Free membership</h2>
-            <div>
-                <img src="./images/smile.svg" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+        <!-- Membership section  -->
+        <section class="membership-section">
+            <h2 class="membership-heading"><span class="membership-span">Free</span> membership</h2>
+            <div class="membership-cards">
+                <div class="membership-card">
+                    <img src="./images/smile.svg" alt="">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="membership-card">
+                    <img src="./images/smile.svg" alt="">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="membership-card">
+                    <img src="./images/smile.svg" alt="">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="membership-card">
+                    <img src="./images/smile.svg" alt="">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
             </div>
-            <div>
-                <img src="./images/smile.svg" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="membership-button">
+                <button>REGISTER FOR FREE</button>
             </div>
-            <div>
-                <img src="./images/smile.svg" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div>
-                <img src="./images/smile.svg" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <button>REGISTER FOR FREE</button>
         </section>
         <section>
             <h2>F.A.Q</h2>
