--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -222,14 +222,16 @@
                 <button>REGISTER FOR FREE</button>
             </div>
         </section>
-        <section>
+
+        <!-- Frequently Asked Questions Start  -->
+        <section class="faq-section">
             <h2>F.A.Q</h2>
-            <div>
-                <div>
+            <div class="faq-container">
+                <div class="faq-top">
                     <div>
                         <h3>How does this work?</h3>
                     </div>
-                    <div>
+                    <div class="faq-item">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -240,19 +242,19 @@
                     <div>
                         <h3>How does this work?</h3>
                     </div>
-                    <div>
+                    <div class="faq-item">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud  exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
                         voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
                         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </div>
                 </div>
-                <div>
+                <div class="faq-2">
                     <div>
                         <h3>How does this work?</h3>
                     </div>
-                    <div>
+                    <div class="faq-item">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -262,7 +264,7 @@
                     <div>
                         <h3>How does this work?</h3>
                     </div>
-                    <div>
+                    <div class="faq-item">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -274,16 +276,21 @@
         </section>
     </main>
     <footer>
-        <section>
-            <div>
-                <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
+        <section class="footer-section">
+            <div class="footer-flex">
+                <div class="footer-img">
+                    <img src="./images/smile(1).svg" alt="Logo">
+                    <img src="./images/SmileSchool.svg" alt="">
+                </div>
                 <div>
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-instagram"></i>
                 </div>
             </div>
-            <p>©smileschool 2020</p>
+            <div class="param">
+                <p>©smileschool 2020</p>
+            </div>
         </section>
     </footer>
 </body>
