--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -3,36 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Headphones</title>
+    <title>Holberton-Headphone</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="0-styles.css">
+
 </head>
 <body>
-    <div class="hero-section">
-        <header class="header">
-            <div class="logo">
-                <img src="./images/logo_headphones.png" alt="Still Logo" class="logo-text">
-            </div>
+    <header>
+        <div class="header">
             <nav>
-                <ul class="nav-links">
-                    <li class="nav-link"><a href="#">what we do</a></li>
-                    <li class="nav-link"><a href="#">our results</a></li>
-                    <li class="nav-link"><a href="#">contact us</a></li>
+                <img src="./images/logo_headphones.png" alt="Logo-image" class="logo">
+                <ul>
+                    <li><a href="#">What we do</a></li>
+                    <li><a href="#">Our Results</a></li>
+                    <li><a href="#">Contact Us</a></li>
                 </ul>
             </nav>
-        </header>
-
-        <div class="hero-intro">
-            <div class="hero-heading">
-                <h2>Lorem ipsum dolor sit amet Lorem ipsum</h2>
-                <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit</p>
+            
+            <div class="header-content">
+                <h1 class="title">Lorem Ipsum dolor set amet Lorem ipsum</h1>
+                <button id="cta">Call to Action</button>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             </div>
-
-            <button class="cta">Call to Action</button>
-
-            <p class="hero-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </div>
-    </div>
+    </header>
+
+    <main>
+
+
+    </main>
+
+    <footer>
+
+
+
+    </footer>
 </body>
 </html>
