--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -6,6 +6,7 @@
     <title>Holberton-Headphone</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="0-styles.css">
+    <link rel="stylesheet" href="holberton_school-icon/style.css">
 
 </head>
 <body>
@@ -31,7 +32,32 @@
     </header>
 
     <main>
+        <section class="what-we-do">
+            <div class="container">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
+                <div class="grid">
+                    <div class="grid-item">
+                        <span class="holberton_school-icon-ic_sound"></span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="grid-item">
+                        <span class="holberton_school-icon-ic_video"></span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="grid-item">
+                        <span class="holberton_school-icon-ic_music"></span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="grid-item">
+                        <span class="holberton_school-icon-ic_hearing"></span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
