--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -59,8 +59,39 @@
             </div>
         </section>
 
+
+        <section class="our-result">
+            <div class="container">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                    magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        
+                <div class="grid">
+                    <div class="grid-item">
+                        <h1>+2%</h1>
+                        <p>Lorem, ipsum dolor.</p>
+                    </div>
+                    <div class="grid-item">
+                        <h1>+2%</h1>
+                        <p>Lorem, ipsum dolor.</p>
+                    </div>
+                    <div class="grid-item">
+                        <h1>+2%</h1>
+                        <p>Lorem, ipsum dolor.</p>
+                    </div>
+                    <div class="grid-item">
+                        <h1>+2%</h1>
+                        <p>Lorem, ipsum dolor.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
+   
     <footer>
 
 
