--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -34,7 +34,8 @@
     <main>
         <section class="what-we-do">
             <div class="container">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                <h1 >What we do...</h1>
+                <p class="container-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
@@ -62,6 +63,7 @@
 
         <section class="our-result">
             <div class="container">
+                <h1 class="section-title">Our results speak for themselves</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                     magna
                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -89,13 +91,34 @@
             </div>
         </section>
 
+        <section class="contact">
+            <h2>Contact Us</h2>
+            <form id="contact-form">
+                <label for="username">Name</label>
+                <input type="text" placeholder="Name" name="username" id="name">
+                <label for="email">Email</label>
+                <input type="email" placeholder="Email" name="email" id="email">
+                <textarea name="message" id="message" placeholder="Message"></textarea>
+
+                <button type="submit" id="cta">Call to Action</button>
+            </form>
+        </section>
+
     </main>
 
    
     <footer>
-
-
-
+        <div class="container">
+            <nav>
+                <img src="./images/logo_headphones.png" alt="headphone logo" class="logo">
+                <ul class="footer-nav">
+                    <li><a href="#"><span class="holberton_school-icon-ic_facebook"></span></a></li>
+                    <li><a href="#"><span class="holberton_school-icon-ic_twitter"></span></a></li>
+                    <li><a href="#"><span class="holberton_school-icon-ic_instagram"></span></a></li>
+                </ul>
+            </nav>
+            <p>&#169;headphones 2025</p>
+        </div>
     </footer>
 </body>
 </html>
